derive_tests/tests/compile_fail/len_no_args.stderr
error: Invalid attribute #[validate] on field `s`: Validator `length` requires at least 1 argument out of `min`, `max` and `equal`
 --> tests/compile_fail/len_no_args.rs:5:5
  |
5 |     #[validate(length())]
  |     ^
